2010-11-02  Sergio Martin <sergio.martin@artica.es>

	* pandoradb_data.sql: Changed several spaces and parentheses
	in the insert data script to their html entities.

2010-11-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/javascript/jquery.ui.datepicker.js,
	include/javascript/jquery.ui.dialog.js,
	include/javascript/jquery.ui.draggable.js,
	include/javascript/jquery.timeentry.js: fixed end of lines that it haven't
	semicolon end char.

2010-11-02  Raúl Mateos <raulofpandora@gmail.com>

	* extensions/pandora_logs.php: Fixed html typos.

	* include/config_process.php: Updated build to prepare 3.2 RC1 release.

2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_db.php: in function "format_array_to_where_clause_sql"
	added lines for test when is a string start with % for check with LIKE
	operator.
	
	Fixes: #3098170

2010-11-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_html.php: cleaned source code style. And added line
	comments for to explain obfuscated $$ operation in function
	"print_input_text_extended".
	
	* godmode/agentes/module_manager_editor_plugin.php: set the field
	"plugin_parameters" with unlimited size. 

2010-10-29  Ramon Novoa  <rnovoa@artica.es>

	* include/fgraph.php: Do not propagate compressed data to dates in the
	  future to make the baseline clearer.

2010-10-29  Miguel de Dios  <miguel.dedios@artica.es>
	
	* extensions/dbmanager.php, godmode/agentes/module_manager_editor.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_copy_modules.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_operations.php,
	godmode/massive/massive_delete_profiles.php,
	godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_action_alerts.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_add_profiles.php,
	godmode/massive/massive_delete_alerts.php,