@@ -693,9 +693,9 @@ function get_agent_modules ($id_agent, $details = false, $filter = false, $index
 		%s
 		ORDER BY nombre',
 		($details != '*' && $indexed) ? 'id_agente_modulo,' : '',
-		implode (",", (array) $details),
+		safe_output(implode (",", (array) $details)),
 		$where);
-	$sql = safe_output($sql);
+
 	$result = get_db_all_rows_sql ($sql);
 	
 	if (empty ($result)) {
